--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_feather_icons: ^2.0.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
